# AckermannRobot_simulation

./: .gitignore  README.md  导航组仓库代码综合指南.docx
src/ackermann_mapping/: CMakeLists.txt  package.xml
src/ackermann_mapping/config/: ackermann_2d.lua
src/ackermann_mapping/launch/: cartographer_2d.launch.py
src/ackermann_mapping/map/: mini.pgm
src/ackermann_navigation2/: CMakeLists.txt  package.xml
src/ackermann_navigation2/config/: ekf_config.yaml  ekf_config_rf2.yaml
src/ackermann_navigation2/launch/: nav2_2d.launch.py  nav2_2d_rf2.launch.py  nav2_slam_2d.launch.py
src/ackermann_navigation2/maps/: mini_world.pgm  mini_world.yaml
src/ackermann_navigation2/params/: param_top_akm_bs.yaml
src/ackermann_navigation2/rviz/: nav2_default_view.rviz
src/ackermann_navigation2/src/: icp_relocalizer.cpp
src/ackermann_robot/: CMakeLists.txt  package.xml
src/ackermann_robot/config/: ackermann_controllers.yaml  view_robot.rviz
src/ackermann_robot/launch/: gazebo.launch.py  keyboard_control.launch.py  map.launch.py  review.launch.py
src/ackermann_robot/maps/: mini_world.yaml
src/ackermann_robot/meshes/top_akm_bs_robot_meshes/: gyro_link.STL  laser_link.STL  left_mushroom_link.STL  mushroom_link.STL  right_mushroom_link.STL  rtk_link.STL
src/ackermann_robot/models/: model.config
src/ackermann_robot/rviz/: slam_config.rviz
src/ackermann_robot/worlds/: empty.world  mini.world
src/ackermann_robot/xacro/: chassis.xacro  common_properties.xacro  control.xacro  robot.xacro  sensors.xacro
